projects/compiler/test/parser/import_error_list_2nd_nonident.out
Error at %FILE_NAME%:1:11
Unexpected token 'int', expected 'identifier':
  |  import a, 2 from "./abc"
               ^