projects/compiler/test/parser/import_error_list_2nd_nonident.abra
import a, 2 from "./abc"